Cd fixes